[feature] Add Met Office Shipping Forecast support
- Introduce `MetOfficeForecastProvider` for 31 sea areas.
- Extend bot to distinguish providers in overlapping area names (e.g., German Bight).
- Replace Haversine formula with nautical miles for location-based suggestions.
- Deprecate `providerByAreaName` in favor of direct provider-context handling.
- Update README and architecture docs to reflect multi-provider support and attribution logic.